syntax = "proto3";

package updateOrder;

service UpdateOrderService {
    rpc UpdateOrder (UpdateOrderDTO) returns (Orders) {}
}

message Orders {
    string _id = 1;
    repeated string productIds = 2;
    int32 quantity = 3;
    int32 totalPrice = 4;
}

message UpdateOrderDTO {
    string userId = 1;
    string productId = 2;
    UpdateAbleData data = 3; 
}

message UpdateAbleData {
    oneof update_field {
        string name = 1;
        int32 price = 2;
        string description = 3;
    }
}